Table overflow fixed
I don't know how to "compile" css files so I'm using the "less compressed"
version of boostrap.css, and I had to make a change to it. Andrew, is this
kosher?

--- a/imageserve/static/css/bootstrap.css
+++ b/imageserve/static/css/bootstrap.css
@@ -4800,6 +4800,11 @@ input[type="submit"].btn.btn-mini {
   overflow-y: auto;
 }
 
+.modal-body > .table {
+    table-layout: fixed;
+    word-wrap: break-word;
+}
+
 .modal-form {
   margin-bottom: 0;
 }
